<resources>
    <string name="app_name">CntgApp ES</string>
    <string name="mensaje_peso">Introduzca peso (kg):</string>
    <string name="mensaje_altura">Introduzca altura (m):</string>
    <string name="boton_calcular">Calcular</string>
    <string name="mensaje_victoria">Correcto! Has acertado! El número era %1$d</string>
    <string name="mensaje_menor">Has fallado! Vuelva a intentarlo. El número es menor. Intentos restantes: %1$d.</string>
    <string name="mensaje_mayor">Has fallado! Vuelva a intentarlo. El número es mayor. Intentos restantes: %1$d.</string>
    <string name="mengaje_game_over">Game Over!! El número correcto era %1$d. Te has quedado sin intentos.</string>
    <string name="mensaje_aviso_introduce">Introduce un número. Por favor.</string>
    <string name="mensaje_boton_probar">Probar suerte</string>
    <string name="mensaje_reiniciar">Reiniciar</string>
    <string name="mensaje_titulo">CNTG APP\nAdivina un número entre 1 el 100</string>
    <string name="precio_medio">Precio medio: %1$s</string>
    <string name="precio_mas_barato">Precio más barato: %1$s</string>
    <string name="precio_mas_caro">Precio más caro: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>